--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- 隐藏部分手机状态栏 -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="icon" href="./static/img/pika.png" sizes="32x32">
     <title>Axue-Blog</title>
   </head>
   <body>
